--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
     "expo": "~49.0.5",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.2",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
