--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
   "name": "chatvid",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-google-signin/google-signin": "^10.0.1",
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.4.8",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "expo": "~49.0.5",
+    "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "^5.0.2",
+    "expo-camera": "^13.6.0",
     "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "^12.3.2",
     "formik": "^2.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-paper": "^5.10.4",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-webrtc": "^111.0.3",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
